--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: debug_input_filler
-description: A Flutter widget to inject initial values in debug mode.
-version: 0.0.1
+description: A Flutter widget to inject initial values in debug mode for different input widgets.
+version: 1.0.0
 homepage:
 
 environment:
