--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,12 @@
 name: debug_input_filler
 description: A Flutter widget to inject initial values in debug mode for different input widgets.
 version: 1.0.0
-homepage:
+homepage: https://github.com/yosefMostafa/debug_input_filler
+license: MIT
+issue_tracker: https://github.com/yosefMostafa/debug_input_filler/issues
+repository: https://github.com/yosefMostafa/debug_input_filler
+
+
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
