--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+linter:
+  rules:
+    - public_member_api_docs
 # The following section is specific to Flutter packages.
 flutter:
 
